# Lux-Client

./: .codacy.yml  .gitignore  CHANGELOG.md  README.md  SECURITY.md  STATISTICS.md  STYLE.md  STYLEGUIDE.md  TECHSTACK.md  TODO.md  index.html  package-lock.json  package.json  tailwind.config.js  test-external-profiles.js  vite.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-release.yml  build-appimage.yml  build-deb.yml  build-rpm.yml  scan.yml
backend/: backupManager.js  main.js  preload.js  splashPreload.js  storeProxy.js
backend/handlers/: auth.js  cloudBackup.js  (+14 more)
electron/: main.js
main/: main.js
public/: splash.html
scratch/: test_regex.js  test_regex_2.js  test_regex_3.js  test_regex_final.js
scripts/: add_guide_translations.ps1  add_pixel_editor_translations.js  add_pixel_editor_translations.py  add_theme_translation.js  add_theme_translation.py  add_uninstall_settings_locales.js  add_uninstall_settings_locales.py  fix_locale_guide.js  fix_locale_guide.py  generate-sounds.js  replace_tokens.py  sync_drop_overlay_locales.js  sync_drop_overlay_locales.py  update_locales.js  update_locales.py  update_locales_java_profiles.js  update_locales_java_profiles.py
src/: App.jsx  App.tsx  i18n.ts  index.css  main.tsx  tauri-bridge.ts
src-tauri/: Cargo.toml  build_err.txt  build_err2.txt  build_err3.txt  tauri.conf.json
src-tauri/src/: auth.rs  backup_manager.rs  instances.rs  launcher.rs  lib.rs  modrinth.rs  skin.rs
src-tauri/src/utils/: error.rs  java.rs  minecraft.rs  mod.rs  paths.rs
tools/: build.py
(+133 files in other folders)
