[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.1", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
zip = "2.2.0"
chrono = "0.4"
walkdir = "2.5"
thiserror = "2.0"
directories = "6.0"
fs_extra = "1.3"
anyhow = "1.0"
rayon = "1.10.0"
sha1 = "0.10.6"
futures-util = "0.3.32"
regex = "1.12.3"
tauri-plugin-store = "2.4.2"
base64 = "0.22"
dirs = "5"
